--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,3 +4,6 @@ AllCops:
 Metrics/BlockLength:
   Exclude:
     - !ruby/regexp /_spec\.rb$/
+Metrics/MethodLength:
+  Exclude:
+    - !ruby/regexp /_spec\.rb$/
